--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Lucsvieirabr/Discord-JS-Bot-2021#readme",
   "dependencies": {
     "discord.js": "^12.5.1",
+    "random-puppy": "^1.1.0",
     "random-words": "^1.1.1",
     "reconlx": "^1.2.41"
   }
