--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@iamtraction/google-translate": "^1.1.2",
     "discord.js": "^12.5.1",
+    "dotenv": "^10.0.0",
     "random-puppy": "^1.1.0",
     "random-words": "^1.1.1",
     "reconlx": "^1.2.41"
